# LMS

./: README.md  pyproject.toml
lms/: db.sqlite3
lms/API/: routers.py  tests.py  views.py
lms/books/: admin.py  models.py  routers.py  views.py
lms/books/migrations/: 0001_initial.py
lms/lms/: settings.py  urls.py
lms/users/: models.py
lms/users/migrations/: 0001_initial.py
